[gd_scene load_steps=8 format=3 uid="uid://bb0erhooyu7aj"]

[ext_resource type="Script" path="res://character.tres.gd" id="1_hoqrh"]
[ext_resource type="Texture2D" uid="uid://cke0fqiqf07wl" path="res://Skins/Jan.png" id="2_kxk8p"]
[ext_resource type="Texture2D" uid="uid://wd7q5uabjgqq" path="res://image (4).png" id="3_g3xpi"]
[ext_resource type="Texture2D" uid="uid://b3i31vkvm3xmj" path="res://pngtree-bubble-comic-splash-design-new-vector-picture-image_9394335.png" id="5_05av3"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_xqvqc"]
properties/0/path = NodePath("RigidBody2D:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath("RigidBody2D:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("RigidBody2D/knife_sprite:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("RigidBody2D/Area2D:position")
properties/3/spawn = true
properties/3/replication_mode = 1
properties/4/path = NodePath("RigidBody2D/Splatter:visible")
properties/4/spawn = true
properties/4/replication_mode = 1

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5ukqs"]
size = Vector2(130.875, 191)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yfmdl"]
size = Vector2(36.0812, 13.2958)

[node name="Character" type="Node2D"]
script = ExtResource("1_hoqrh")

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_xqvqc")

[node name="RigidBody2D" type="RigidBody2D" parent="."]
metadata/Name = &"Character"
metadata/PlayerName = &"Jan"

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
position = Vector2(-17.4375, -104.5)
shape = SubResource("RectangleShape2D_5ukqs")
metadata/Name = &"Character"

[node name="Character" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(-82, -129)
scale = Vector2(0.550406, 0.550406)
texture = ExtResource("2_kxk8p")
centered = false

[node name="knife_sprite" type="Sprite2D" parent="RigidBody2D"]
position = Vector2(82, -130)
scale = Vector2(0.228889, 0.228889)
texture = ExtResource("3_g3xpi")

[node name="Area2D" type="Area2D" parent="RigidBody2D"]

[node name="knife" type="CollisionShape2D" parent="RigidBody2D/Area2D"]
position = Vector2(92.0931, -135.504)
rotation = -0.698132
shape = SubResource("RectangleShape2D_yfmdl")

[node name="Splatter" type="Sprite2D" parent="RigidBody2D"]
visible = false
position = Vector2(-24, -89)
scale = Vector2(0.12, 0.12)
texture = ExtResource("5_05av3")

[connection signal="body_entered" from="RigidBody2D" to="." method="_on_rigid_body_2d_body_entered"]
[connection signal="body_entered" from="RigidBody2D/Area2D" to="." method="_on_area_2d_body_entered"]
